# slicemath

./: Cargo.toml  README.md
src/: lib.rs  test.rs
